.storybook/storybook-reset.css
html {
  height: 100%;
}

html.dark {
  background-color: #2c2c2c;
}

body {
  margin: 0;
}

.story-layout {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  overflow-y: auto;
}

.sbdocs .story-layout {
  height: 350px;
}

.radix-notice {
  position: absolute;
  top: 16px;
  right: 16px;
  display: flex;
  align-items: center;
}

.radix-link {
  display: inline-flex;
  gap: 2px;
  align-items: center;
}

.beta-notice {
  border: 1px solid #fab815;
  background-color: rgba(255, 241, 194, 0.2);
  padding: 12px 16px;
  border-radius: 5px;
  margin: -24px auto 40px !important;
  max-width: 720px;

  p {
    margin: 0;
  }
}

